--- a/my_first_module/views/students_views.xml
+++ b/my_first_module/views/students_views.xml
@@ -17,7 +17,6 @@
             </field>
         </record>
 
-        <!-- Action Window -->
         <record id="action_students_list" model="ir.actions.act_window">
             <field name="name">Students Models</field>
             <field name="res_model">students.model</field>
@@ -25,11 +24,50 @@
             <field name="view_id" ref="view_students_list"/>
         </record>
 
-        <!-- Menu Items -->
         <menuitem id="menu_students_root" name="Students Models"/>
-        <menuitem id="my_students_model" name="Students Models"
+
+        <menuitem id="my_students_model" name="Students not models"
                   parent="menu_students_root"
                   action="action_students_list"/>
+
+                <record id="view_students_config_settings" model="ir.ui.view">
+            <field name="name">res.config.settings.view.form.inherit.students</field>
+            <field name="model">res.config.settings</field>
+            <field name="inherit_id" ref="base.res_config_settings_view_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//form" position="inside">
+                    <app string="Students" name="students_app" groups="base.group_system">
+                        <block title="Student Configuration" name="student_setting_container">
+                            <setting id="enable_student_feature" string="Enable Student Feature" help="Enable extra features for students">
+                            </setting>
+                        </block>
+                    </app>
+                </xpath>
+            </field>
+        </record>
+
+        <!-- Action for Settings Page -->
+        <record id="action_students_config_settings" model="ir.actions.act_window">
+            <field name="name">Settings</field>
+            <field name="res_model">res.config.settings</field>
+            <field name="view_mode">form</field>
+            <field name="target">inline</field>
+            <field name="context">{'module': 'my_first_module', 'bin_size': False, 'my_first_module':True}</field>
+        </record>
+
+        <!-- Menu: Parent -->
+        <menuitem id="menu_students_config_root" name="Configuration"
+                  parent="menu_students_root"
+                  sequence="100" groups="base.group_system"/>
+
+        <!-- Menu: Settings -->
+        <menuitem id="menu_students_general_settings" name="Settings"
+                  parent="menu_students_config_root"
+                  action="action_students_config_settings"
+                  sequence="1" groups="base.group_system"/>
+
+        
+
 
     </data>
 </odoo>
